--- a/TaskManagerSystemApi/pom.xml
+++ b/TaskManagerSystemApi/pom.xml
@@ -92,6 +92,11 @@
             <artifactId>validation-api</artifactId>
             <version>2.0.1.Final</version>
         </dependency>
+        <dependency>
+            <groupId>io.swagger.parser.v3</groupId>
+            <artifactId>swagger-parser</artifactId>
+            <version>2.0.26</version>
+        </dependency>
     </dependencies>
 
     <build>
