--- a/TaskManagerSystemApi/pom.xml
+++ b/TaskManagerSystemApi/pom.xml
@@ -97,6 +97,11 @@
             <artifactId>swagger-parser</artifactId>
             <version>2.0.26</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
